# obs-chaturlate

./: CMakeLists.txt
.github/scripts/: patch-obs-sdk-check.sh
.github/scripts/utils.zsh/: setup_ccache
.github/workflows/: build-chaturlate.yml
cmake/: BuildICU.cmake  BuildWhispercpp.cmake
src/: chaturlate-filter-data.h  chaturlate-filter.c  chaturlate-filter.cpp  chaturlate-filter.h  plugin-main.c  squawk-source.cpp  transcription-filter-callbacks.cpp  transcription-filter-callbacks.h  transcription-filter-data.h  transcription-utils.cpp  transcription-utils.h
src/model-utils/: model-downloader-types.h  model-downloader.cpp  model-downloader.h  model-find-utils.cpp  model-find-utils.h  model-infos.cpp
src/sherpa-tts/: sherpa-tts.cpp
src/translation/: translation-utils.cpp
src/whisper-utils/: whisper-model-utils.cpp  whisper-params.cpp  whisper-processing.cpp  whisper-processing.h  whisper-utils.cpp
